--- a/exercises/lab2.html
+++ b/exercises/lab2.html
@@ -5,13 +5,16 @@
 		<title>Issa Rae's Career</title>
 	</head>
 	<body>
-   		<!-- Challenge #1: wrap the content below in divs -->
+   		<div>
 		<h1>Issa Rae's Career</h1>
 
 		<p>Jo-Issa Rae Diop[1] (born January 12, 1985),[2] credited professionally as Issa Rae, is an American actress, writer, and producer. Rae first garnered attention for her work on the YouTube web series Awkward Black Girl.</p><p>Since 2011, Rae has continued to develop her YouTube channel, which features various short films, web series, and other content created by black people.</p>
     		<p>Rae achieved wider recognition as the co-creator, co-writer, and star of the HBO television series Insecure (2016–2021), for which she was nominated for multiple Golden Globes Awards and Primetime Emmy Awards. Her 2015 memoir, titled The Misadventures of Awkward Black Girl, became a New York Times bestseller. In 2018 and 2022, Rae was included in the annual Time 100 list of the most influential people in the world.</p>
 
-    		<!-- Challenge #2: Add an image tag with alt content to describe the image for screen readers -->
-		<!-- Challenge #3: Add 2 new HTML elements to your webpage - visit this web page to come up with 2 new elements to experiment with https://www.w3schools.com/html/html_elements.asp -->
+    		<img src="https://people.com/thmb/sEqUH-sHcGZ6j3UOMQn1Nt78Pso=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():focal(749x0:751x2):format(webp)/issa-rae-barbie-pink-071323-d588af8a3a854a3f8e3b584353483e3f.jpg"
+			alt="Izza.jpg"</img>
+<p> This is a <br> paragraph starter</p>
+			
 	</body>
+</div>
 </html>
